# TIL_python

./: .env.example  .gitattributes  .gitignore  2020_cb_cheongju_seowon.xml  README.md  Untitled.ipynb  crawled_data.csv  main.py  numpy.md  pyproject.toml  requirements.txt
.github/workflows/: download-kaggle-dataset.yml  update-readme.yml
TIL/: 20260125.md
TIL/crawling/: pandas_read_html.ipynb
TIL/data analysis/: Part 3. 데이터 분석 프로세스 (step by step).ipynb
TIL/excel_pandas/: read_excel.ipynb  vlookup.ipynb
TIL/ml/: EDA 기초 실습.ipynb  EDA_기초_실습.ipynb  PCA를 이용한 차원축소와 시각화.ipynb  download_real_estate.py  pyproject.toml  requirements.txt  기본_ML_모델.ipynb  데이터_셋_분할.ipynb  데이터_전처리.ipynb  데이터의 군집화 방법론.ipynb  머신러닝_심화_모델.ipynb  베이스라인코드.ipynb  변수_선택_방법.ipynb  분류문제 모델링 방법론.ipynb  분류문제_모델링_방법론.ipynb  사례를_통해서_배우는_파생_변수_만들기_1.ipynb  사례를_통해서_배우는_파생_변수_만들기_2.ipynb  선형회귀 모델링 방법론.ipynb  시계열 데이터 처리 실습.ipynb  실전_프로젝트.ipynb  협업 필터링을 활용한 평점 예측.ipynb
TIL/ml/.ipynb_checkpoints/: PCA를 이용한 차원축소와 시각화-checkpoint.ipynb  eda_basic_practice-checkpoint.ipynb  협업 필터링을 활용한 평점 예측-checkpoint.ipynb
TIL/ml/data/: Company.csv  Company.parquet  OHLCV.csv  OHLCV.parquet  tree.dot
TIL/yt_comment_crawling/: 01_api_call.py  02_api_call.py  03_comment_api_call.py  04_save_excel_api_call.py  search_results.json
freeboards/: generate_readme.py  schedule.ipynb  schedule.py  utils.py
freeboards/asset/: schedule.csv
mlops/: .env.template  Dockerfile  compose.yaml  crawler.py  main.py  preprocessing.py  requirements.txt  start_api_server.sh
mlops/src/: main.py  webapp.py
mlops/src/dataset/: watch_log.py
mlops/src/evaluate/: evaluate.py
mlops/src/inference/: inference.py
mlops/src/model/: movie_predictor.py
mlops/src/postprocess/: postprocess.py
mlops/src/train/: train.py
mlops/src/utils/: factory.py  utils.py
src/: class.ipynb  function.ipynb  main.py  데이터분석.ipynb  판다스-데이터분석.ipynb
src/.ipynb_checkpoints/: main-checkpoint.py  numpy-checkpoint.md  판다스-데이터분석-checkpoint.ipynb  판다스ㅡ-checkpoint.ipynb
src/assignment/: crawled_python_libraries_2025.csv  crawling.ipynb
src/crawling/: BeautifulSoup.py  JSON실습.ipynb  test.ipynb  뉴스API실습-1.ipynb  크롤링실습-1.ipynb  크롤링실습-2.ipynb  크롤링테스트.ipynb  해외축구크롤링.ipynb
src/crawling/.ipynb_checkpoints/: test-checkpoint.ipynb  크롤링실습-1-checkpoint.ipynb  크롤링테스트-checkpoint.ipynb
src/crawling/company/: artist.ipynb
src/data/: crawled_text.txt  crawled_urls.json  test01.json
src/git/: .gitignore  adder.py  learn-md.md  main.py
src/linux/assignment/: openDataPotal.ipynb  q1.py  q2.py  q3.py  q4_street_view.py  q5.py
src/linux/http_practice/: server.py  tiktok-finger-detection.py
src/linux/process/: mulp1.c  mulp2.c  mulp3.c  mulp4.c
src/math/: ab_clicks_practice.csv  model_accuracy_practice.csv  통계실습-3.ipynb  통계실습-AB테스트.ipynb
src/math/assignment/: team_project1.ipynb
src/numpy/: excuted_create_array.ipynb  excuted_output_array.ipynb  executed_array.ipynb  main.py
(+5 files in other folders)
