[project]
name = "freeboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "beautifulsoup4",
    "category-encoders>=2.9.0",
    "fastapi>=0.128.0",
    "gensim",
    "google-api-python-client>=2.190.0",
    "graphviz>=0.21",
    "matplotlib>=3.10.8",
    "matplotlib-inline>=0.2.1",
    "mediapipe>=0.10.31",
    "mplfinance>=0.12.10b0",
    "numpy",
    "opencv-python>=4.11.0.86",
    "openpyxl",
    "pandas",
    "pandas-stubs>=3.0.0.260204",
    "plotly>=6.5.1",
    "pre-commit>=4.5.1",
    "psutil",
    "pydantic>=2.12.5",
    "pygame",
    "python-dotenv>=1.2.1",
    "requests",
    "rich>=14.2.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "selenium>=4.39.0",
    "statsmodels>=0.14.6",
    "types-requests>=2.32.4.20260107",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "nbconvert>=7.16.6",
    "notebook>=7.0.0",
]

[tool.uv.workspace]
members = [
    "TIL/ml",
]
